--- a/res/layout/activity_login.xml
+++ b/res/layout/activity_login.xml
@@ -1,110 +1,115 @@
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools"
+<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@drawable/login_bg"
-    android:gravity="center"
-    android:orientation="vertical"
-    android:paddingBottom="@dimen/activity_vertical_margin"
-    android:paddingLeft="@dimen/activity_horizontal_margin"
-    android:paddingRight="@dimen/activity_horizontal_margin"
-    android:paddingTop="@dimen/activity_vertical_margin"
-    tools:context="com.example.login.MainActivity" >
+    android:background="@drawable/login_bg" >
 
-    <ImageView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_gravity="center_horizontal"
-        android:layout_marginBottom="30dp"
-        android:src="@drawable/icon" />
-
-    <RelativeLayout
+    <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:background="@drawable/shape_layout_input" >
+        android:layout_marginTop="50dp"
+        android:gravity="center"
+        android:orientation="vertical"
+        android:paddingBottom="@dimen/activity_vertical_margin"
+        android:paddingLeft="@dimen/activity_horizontal_margin"
+        android:paddingRight="@dimen/activity_horizontal_margin"
+        android:paddingTop="@dimen/activity_vertical_margin" >
 
         <ImageView
-            android:id="@+id/ivNick"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:padding="6dp"
-            android:src="@drawable/nickname" />
+            android:layout_gravity="center_horizontal"
+            android:layout_marginBottom="30dp"
+            android:src="@drawable/icon" />
 
-        <EditText
-            android:id="@+id/etAccount"
+        <RelativeLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_alignBottom="@id/ivNick"
-            android:layout_alignTop="@id/ivNick"
-            android:layout_marginLeft="10dp"
-            android:layout_toEndOf="@id/ivNick"
-            android:singleLine="true"
-            android:background="@null"
-            android:hint="账号"
-            android:textColor="@android:color/white"
-            android:textColorHint="@android:color/white" />
+            android:background="@drawable/shape_layout_input" >
 
-        <View
+            <ImageView
+                android:id="@+id/ivNick"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:padding="6dp"
+                android:src="@drawable/nickname" />
+
+            <EditText
+                android:id="@+id/etAccount"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_alignBottom="@id/ivNick"
+                android:layout_alignTop="@id/ivNick"
+                android:layout_marginLeft="10dp"
+                android:layout_toEndOf="@id/ivNick"
+                android:background="@null"
+                android:hint="账号"
+                android:singleLine="true"
+                android:textColor="@android:color/white"
+                android:textColorHint="@android:color/white" />
+
+            <View
+                android:layout_width="match_parent"
+                android:layout_height="0.5dp"
+                android:layout_below="@id/ivNick"
+                android:background="@drawable/line" />
+
+            <ImageView
+                android:id="@+id/ivPwd"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_below="@id/ivNick"
+                android:padding="6dp"
+                android:src="@drawable/password" />
+
+            <EditText
+                android:id="@+id/etPwd"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_alignBottom="@id/ivPwd"
+                android:layout_alignTop="@id/ivPwd"
+                android:layout_below="@id/etAccount"
+                android:layout_marginLeft="10dp"
+                android:layout_toEndOf="@id/ivPwd"
+                android:background="@null"
+                android:hint="密码"
+                android:inputType="textPassword"
+                android:textColor="@android:color/white"
+                android:textColorHint="@android:color/white" />
+        </RelativeLayout>
+
+        <Button
+            android:id="@+id/btnLogin"
             android:layout_width="match_parent"
-            android:layout_height="0.5dp"
-            android:layout_below="@id/ivNick"
-            android:background="@drawable/line" />
-
-        <ImageView
-            android:id="@+id/ivPwd"
-            android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_below="@id/ivNick"
-            android:padding="6dp"
-            android:src="@drawable/password" />
-
-        <EditText
-            android:id="@+id/etPwd"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_alignBottom="@id/ivPwd"
-            android:layout_alignTop="@id/ivPwd"
-            android:layout_below="@id/etAccount"
-            android:layout_marginLeft="10dp"
-            android:layout_toEndOf="@id/ivPwd"
-            android:background="@null"
-            android:inputType="textPassword"
-            android:hint="密码"
-            android:textColor="@android:color/white"
-            android:textColorHint="@android:color/white" />
-    </RelativeLayout>
-
-    <Button
-        android:id="@+id/btnLogin"
-        android:layout_width="match_parent"
-        android:layout_height="35dip"
-        android:layout_gravity="center"
-        android:layout_marginTop="15dp"
-        android:background="@drawable/selector_btn"
-        android:text="登录"
-        android:textColor="@android:color/white" />
-
-    <RelativeLayout
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="10dp" >
-
-        <TextView
-            android:id="@+id/tvForgetPwd"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:padding="5dp"
-            android:text="忘记密码?"
+            android:layout_gravity="center"
+            android:layout_marginTop="15dp"
+            android:background="@drawable/selector_btn"
+            android:text="登录"
             android:textColor="@android:color/white" />
 
-        <TextView
-            android:id="@+id/tvRegister"
-            android:layout_width="wrap_content"
+        <RelativeLayout
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_alignParentRight="true"
-            android:padding="5dp"
-            android:text="现在去注册"
-            android:textColor="@android:color/white" />
-    </RelativeLayout>
+            android:layout_marginBottom="70dp"
+            android:layout_marginTop="15dp" >
 
-</LinearLayout>
+            <TextView
+                android:id="@+id/tvForgetPwd"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:padding="5dp"
+                android:text="忘记密码?"
+                android:textColor="@android:color/white" />
+
+            <TextView
+                android:id="@+id/tvRegister"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_alignParentRight="true"
+                android:padding="5dp"
+                android:text="现在去注册"
+                android:textColor="@android:color/white" />
+        </RelativeLayout>
+    </LinearLayout>
+
+</ScrollView>
